# Atliq_Grands_EDA_Python_Project

./: EDA_Atliq_Grands.ipynb  README.md  pyproject.toml
datasets/: datasets.txt
